<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tiraza.toko.LoginRegister">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:fontFamily="monospace"
        android:text="@string/belanja_material_online"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="30sp"
        android:typeface="monospace"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lebih_dari_500_orang_perhari_membeli_bahan_material_bangunan"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.0"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription=""
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="217dp"
        android:layout_height="28dp"
        android:fontFamily="monospace"
        android:text="@string/login_atau_register"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="18sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.508"
        tools:layout_editor_absoluteY="155dp"
        tools:layout_editor_absoluteX="156dp"/>

    <Button
        android:id="@+id/bLogin"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginTop="1dp"
        android:onClick="Login"
        android:text="@string/login"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"/>

    <Button
        android:id="@+id/bRegister"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginTop="-5dp"
        android:onClick="Register"
        android:text="@string/register"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bLogin"/>

</android.support.constraint.ConstraintLayout>
